--- a/0 - Introduccion a Python/4 - OS y regex/material_automatizacion_pygui_bash_os.ipynb
+++ b/0 - Introduccion a Python/4 - OS y regex/material_automatizacion_pygui_bash_os.ipynb
@@ -100,20 +100,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "id": "it0EOKdmXTB2"
+    "id": "it0EOKdmXTB2",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyautogui\n",
+      "  Using cached PyAutoGUI-0.9.54.tar.gz (61 kB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Collecting pymsgbox (from pyautogui)\n",
+      "  Using cached PyMsgBox-1.0.9.tar.gz (18 kB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Collecting pytweening>=1.0.4 (from pyautogui)\n",
+      "  Using cached pytweening-1.1.0.tar.gz (168 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Collecting pyscreeze>=0.1.21 (from pyautogui)\n",
+      "  Using cached PyScreeze-0.1.30.tar.gz (27 kB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Collecting pygetwindow>=0.0.5 (from pyautogui)\n",
+      "  Using cached PyGetWindow-0.0.9.tar.gz (9.7 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Collecting mouseinfo (from pyautogui)\n",
+      "  Using cached MouseInfo-0.1.3.tar.gz (10 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Collecting pyrect (from pygetwindow>=0.0.5->pyautogui)\n",
+      "  Using cached PyRect-0.2.0.tar.gz (17 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Requirement already satisfied: Pillow>=9.3.0 in c:\\users\\juli\\anaconda3\\lib\\site-packages (from pyscreeze>=0.1.21->pyautogui) (9.4.0)\n",
+      "Collecting pyperclip (from mouseinfo->pyautogui)\n",
+      "  Using cached pyperclip-1.8.2.tar.gz (20 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Building wheels for collected packages: pyautogui, pygetwindow, pyscreeze, pytweening, mouseinfo, pymsgbox, pyperclip, pyrect\n",
+      "  Building wheel for pyautogui (pyproject.toml): started\n",
+      "  Building wheel for pyautogui (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for pyautogui: filename=PyAutoGUI-0.9.54-py3-none-any.whl size=37597 sha256=b54e9feed7f813056d74a871a79ee211da8b662da12756adb09a7aa121aad3e2\n",
+      "  Stored in directory: c:\\users\\juli\\appdata\\local\\pip\\cache\\wheels\\95\\dc\\b1\\fe122b791e0db8bf439a0e6e1d2628e48f10bf430cae13521b\n",
+      "  Building wheel for pygetwindow (setup.py): started\n",
+      "  Building wheel for pygetwindow (setup.py): finished with status 'done'\n",
+      "  Created wheel for pygetwindow: filename=PyGetWindow-0.0.9-py3-none-any.whl size=11079 sha256=50d398fadbd92fb03f98aecf2a7e55ad5156519e4f31bb8b4f87c370b0559e92\n",
+      "  Stored in directory: c:\\users\\juli\\appdata\\local\\pip\\cache\\wheels\\07\\75\\0b\\7ca0b598eb4c21d43ba4bcc78a0538dfcf803a5997da33bc19\n",
+      "  Building wheel for pyscreeze (pyproject.toml): started\n",
+      "  Building wheel for pyscreeze (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for pyscreeze: filename=PyScreeze-0.1.30-py3-none-any.whl size=14400 sha256=2465c7b654cbfff119ad9b824361c4604b9972ac36d9b67839382041f28f5999\n",
+      "  Stored in directory: c:\\users\\juli\\appdata\\local\\pip\\cache\\wheels\\df\\bc\\15\\d685ca085ca4b11e46e54cc3da4e501a98856c7fea8f604500\n",
+      "  Building wheel for pytweening (setup.py): started\n",
+      "  Building wheel for pytweening (setup.py): finished with status 'done'\n",
+      "  Created wheel for pytweening: filename=pytweening-1.1.0-py3-none-any.whl size=6215 sha256=115ebac934125588a48236f1d5d7b15549566d6ff8f286d957ddf81e73692443\n",
+      "  Stored in directory: c:\\users\\juli\\appdata\\local\\pip\\cache\\wheels\\29\\81\\8c\\55f3068e67c61d6133c02501022c9aae4c4432738a473eafed\n",
+      "  Building wheel for mouseinfo (setup.py): started\n",
+      "  Building wheel for mouseinfo (setup.py): finished with status 'done'\n",
+      "  Created wheel for mouseinfo: filename=MouseInfo-0.1.3-py3-none-any.whl size=10906 sha256=f4158b86055b64c567e1328e0a2599328e9ab4f2b1e6303c428ba51cd7b1712c\n",
+      "  Stored in directory: c:\\users\\juli\\appdata\\local\\pip\\cache\\wheels\\20\\0b\\7f\\939ac9ff785b09951c706150537572c00123412f260a6024f3\n",
+      "  Building wheel for pymsgbox (pyproject.toml): started\n",
+      "  Building wheel for pymsgbox (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for pymsgbox: filename=PyMsgBox-1.0.9-py3-none-any.whl size=7416 sha256=6aea6a8fa6bcafec7140f6efa70ca4f3524245654650e79766e0a634fad6b9d8\n",
+      "  Stored in directory: c:\\users\\juli\\appdata\\local\\pip\\cache\\wheels\\85\\92\\63\\e126ee5f33d8f2ed04f96e43ef5df7270a2f331848752e8662\n",
+      "  Building wheel for pyperclip (setup.py): started\n",
+      "  Building wheel for pyperclip (setup.py): finished with status 'done'\n",
+      "  Created wheel for pyperclip: filename=pyperclip-1.8.2-py3-none-any.whl size=11137 sha256=35fd3d659ea07f998817e02797b7d0b4767ffb0e6b76f15666b5222ef60f1aba\n",
+      "  Stored in directory: c:\\users\\juli\\appdata\\local\\pip\\cache\\wheels\\70\\bd\\ba\\8ae5c080c895c9360fe6e153acda2dee82527374467eae061b\n",
+      "  Building wheel for pyrect (setup.py): started\n",
+      "  Building wheel for pyrect (setup.py): finished with status 'done'\n",
+      "  Created wheel for pyrect: filename=PyRect-0.2.0-py2.py3-none-any.whl size=11205 sha256=d7980ff2f858942641c4d2fa969d66211a9bfd2c07badc736b63049332dbab4e\n",
+      "  Stored in directory: c:\\users\\juli\\appdata\\local\\pip\\cache\\wheels\\c4\\e9\\fc\\b7a666dd4f9a3168fb44d643079b41d36ddab52f470707e820\n",
+      "Successfully built pyautogui pygetwindow pyscreeze pytweening mouseinfo pymsgbox pyperclip pyrect\n",
+      "Installing collected packages: pytweening, pyrect, pyperclip, pymsgbox, pyscreeze, pygetwindow, mouseinfo, pyautogui\n",
+      "Successfully installed mouseinfo-0.1.3 pyautogui-0.9.54 pygetwindow-0.0.9 pymsgbox-1.0.9 pyperclip-1.8.2 pyrect-0.2.0 pyscreeze-0.1.30 pytweening-1.1.0\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pyautogui"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "id": "FYCDi7LhXTB3"
+    "id": "FYCDi7LhXTB3",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -125,9 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "id": "sFdr2i3MXTB3"
+    "id": "sFdr2i3MXTB3",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -140,9 +231,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "id": "aesO7-NvXTB4"
+    "id": "aesO7-NvXTB4",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -151,9 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "id": "Lmd0MasDPuTO"
+    "id": "Lmd0MasDPuTO",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -162,9 +255,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "id": "f0-dsF7LPuTa"
+    "id": "f0-dsF7LPuTa",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -180,9 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "id": "nfu5YgETXTB5"
+    "id": "nfu5YgETXTB5",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -196,9 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "id": "S7PLbkweXTB5"
+    "id": "S7PLbkweXTB5",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -219,9 +315,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "id": "fg2CJaYcXTB5"
+    "id": "fg2CJaYcXTB5",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -265,20 +362,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "ouZ6t1KNkiBD",
-    "outputId": "95cd40cc-6d36-43da-93ff-c0b2d17ebaec"
+    "outputId": "95cd40cc-6d36-43da-93ff-c0b2d17ebaec",
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/content\n"
+      "\"pwd\" no se reconoce como un comando interno o externo,\n",
+      "programa o archivo por lotes ejecutable.\n"
      ]
     }
    ],
@@ -289,20 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "esEXIwSbXTB6",
-    "outputId": "355d72e3-fde1-4060-8241-72968c3fecae"
+    "outputId": "355d72e3-fde1-4060-8241-72968c3fecae",
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample_data\n"
+      "\"ls\" no se reconoce como un comando interno o externo,\n",
+      "programa o archivo por lotes ejecutable.\n"
      ]
     }
    ],
@@ -325,30 +426,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "0wV9rYPck9BM",
-    "outputId": "c2d3bd56-caf8-46fb-8a14-253e95bae7ff"
+    "outputId": "c2d3bd56-caf8-46fb-8a14-253e95bae7ff",
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "--2022-09-06 21:47:13--  https://unket.s3.sa-east-1.amazonaws.com/data/Expo_2021.zip\n",
-      "Resolving unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)... 52.95.165.102\n",
-      "Connecting to unket.s3.sa-east-1.amazonaws.com (unket.s3.sa-east-1.amazonaws.com)|52.95.165.102|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 58863328 (56M) [application/zip]\n",
-      "Saving to: ‘Expo_2021.zip’\n",
-      "\n",
-      "Expo_2021.zip       100%[===================>]  56.14M  17.4MB/s    in 3.2s    \n",
-      "\n",
-      "2022-09-06 21:47:17 (17.4 MB/s) - ‘Expo_2021.zip’ saved [58863328/58863328]\n",
-      "\n"
+      "\"wget\" no se reconoce como un comando interno o externo,\n",
+      "programa o archivo por lotes ejecutable.\n"
      ]
     }
    ],
