--- a/0 - Introduccion a Python/5 - Bash VSC y ejecutables/bash_cli_vscode.ipynb
+++ b/0 - Introduccion a Python/5 - Bash VSC y ejecutables/bash_cli_vscode.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/julialoelopez/diplomatura-IA-Humai/blob/main/0%20-%20Introduccion%20a%20Python/5%20-%20Bash%20VSC%20y%20ejecutables\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/julialoelopez/diplomatura-IA-Humai/blob/main/0%20-%20Introduccion%20a%20Python/5%20-%20Bash%20VSC%20y%20ejecutables/bash_cli_vscode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
