--- a/0 - Introduccion a Python/5 - Bash VSC y ejecutables/bash_cli_vscode.ipynb
+++ b/0 - Introduccion a Python/5 - Bash VSC y ejecutables/bash_cli_vscode.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/julialoelopez/diplomatura-IA-Humai/blob/main/0%20-%20Introduccion%20a%20Python/5%20-%20Bash%20VSC%20y%20ejecutables/bash_cli_vscode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "206be922",
       "metadata": {
         "id": "206be922"
@@ -19,6 +9,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/institutohumai/cursos-python/blob/master/PracticasDeDesarrollo/1_Desarrollo_I/bash_cli_vscode.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\" data-canonical-src=\"https://colab.research.google.com/assets/colab-badge.svg\"></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PROBANDO CAMBIOS"
+      ],
+      "metadata": {
+        "id": "e9HlUvtP-5KF"
+      },
+      "id": "e9HlUvtP-5KF"
     },
     {
       "cell_type": "markdown",
@@ -1146,7 +1146,7 @@
       "id": "396dbaab-0499-4c19-afb0-d48ccfee488e",
       "metadata": {
         "id": "396dbaab-0499-4c19-afb0-d48ccfee488e",
-        "outputId": "80e50596-3d11-4a11-d738-f7eacfd8d8cc"
+        "outputId": "1d5c79a5-91eb-426a-8bdf-ae371f1e7152"
       },
       "outputs": [
         {
@@ -1188,7 +1188,7 @@
       "id": "a9d33180-f199-4906-8dd6-232a9256be0a",
       "metadata": {
         "id": "a9d33180-f199-4906-8dd6-232a9256be0a",
-        "outputId": "d6f94ba0-042c-4f48-a022-e625f76d88a3"
+        "outputId": "d5c4da9c-36ef-475b-d309-518fae5ff7ef"
       },
       "outputs": [
         {
@@ -1227,7 +1227,7 @@
       "id": "26c9379d-1162-4d97-b812-3cab8070e4a4",
       "metadata": {
         "id": "26c9379d-1162-4d97-b812-3cab8070e4a4",
-        "outputId": "23bc5767-8e78-43ff-ba01-0dddceaee42c"
+        "outputId": "6cb71f90-a4de-4ac2-d645-f8efce834218"
       },
       "outputs": [
         {
@@ -1261,7 +1261,7 @@
       "id": "32e5c8a0-ccb8-44a4-9030-7f283f455d18",
       "metadata": {
         "id": "32e5c8a0-ccb8-44a4-9030-7f283f455d18",
-        "outputId": "8a9ba754-def7-46c0-f67f-495e0d09659c"
+        "outputId": "67fa2838-75e2-4ff2-84b4-19612976d7bf"
       },
       "outputs": [
         {
@@ -1287,7 +1287,7 @@
       "id": "a5726de8-5d3f-4a9f-959a-6eb032173f5b",
       "metadata": {
         "id": "a5726de8-5d3f-4a9f-959a-6eb032173f5b",
-        "outputId": "369b7e7d-154c-44fb-9fa0-a09c10b07768"
+        "outputId": "aab8a023-9ce4-47fe-9e24-176659b1cc21"
       },
       "outputs": [
         {
@@ -1356,7 +1356,7 @@
       "id": "c60b9a1b-3f7f-4003-b943-8deaf9fbbe53",
       "metadata": {
         "id": "c60b9a1b-3f7f-4003-b943-8deaf9fbbe53",
-        "outputId": "4dce1114-ae21-47e9-81a7-653de42bd6a6"
+        "outputId": "59dcc5f1-b4d7-476d-9e69-3493d69de948"
       },
       "outputs": [
         {
@@ -1410,7 +1410,7 @@
       "id": "9db629a5-1a59-4977-8f6f-da64fbcd3a8b",
       "metadata": {
         "id": "9db629a5-1a59-4977-8f6f-da64fbcd3a8b",
-        "outputId": "81fe7d7a-de75-47aa-b7de-530620b13afa"
+        "outputId": "34c976e6-1dd6-4554-dc73-3f0af17e2cd5"
       },
       "outputs": [
         {
@@ -1446,7 +1446,7 @@
       "id": "676d6ff2-16f2-44bc-8dda-c1a145f4b2a0",
       "metadata": {
         "id": "676d6ff2-16f2-44bc-8dda-c1a145f4b2a0",
-        "outputId": "3c13adaf-e5e8-452c-de0a-304324c72d30"
+        "outputId": "ef82d2e6-cd16-44fd-d5da-09d7f2f571e8"
       },
       "outputs": [
         {
@@ -1481,7 +1481,7 @@
       "id": "55871055-ef30-4c11-b674-efccbc6fd278",
       "metadata": {
         "id": "55871055-ef30-4c11-b674-efccbc6fd278",
-        "outputId": "4362cbef-cf05-4d6b-a9b4-16b8fa716ada"
+        "outputId": "829fc8dc-24e5-4caf-bc92-1f22601d1445"
       },
       "outputs": [
         {
@@ -1533,7 +1533,7 @@
       "id": "5891c919-885d-4733-af1f-4f3e6cb8bc58",
       "metadata": {
         "id": "5891c919-885d-4733-af1f-4f3e6cb8bc58",
-        "outputId": "a8406843-bd3d-415b-dcd6-9325ded9270a"
+        "outputId": "de317f32-0eae-4979-ae1e-1c6287badfd4"
       },
       "outputs": [
         {
@@ -1591,7 +1591,7 @@
       "id": "06c87f2b-a1b7-48d0-9425-834e046b3f86",
       "metadata": {
         "id": "06c87f2b-a1b7-48d0-9425-834e046b3f86",
-        "outputId": "c8de58f2-5fee-4690-849b-d4cdecd95f90"
+        "outputId": "1b8c39c6-8fc5-4830-a48c-100420507ce1"
       },
       "outputs": [
         {
@@ -1616,7 +1616,7 @@
       "id": "ffb35af2-5364-43cc-a336-cb4268efda6f",
       "metadata": {
         "id": "ffb35af2-5364-43cc-a336-cb4268efda6f",
-        "outputId": "0417823d-6481-4ec0-cf24-5cac42ef8577"
+        "outputId": "33d3744e-d197-4d97-dbe9-f92e930a2341"
       },
       "outputs": [
         {
@@ -1650,7 +1650,7 @@
       "id": "ac2cb89f-d86e-4b79-a540-cb925460d7f6",
       "metadata": {
         "id": "ac2cb89f-d86e-4b79-a540-cb925460d7f6",
-        "outputId": "411db227-32b1-4342-f646-29bf78bd8bb3"
+        "outputId": "33f87011-8934-464c-b2a0-b560cd82d9a0"
       },
       "outputs": [
         {
@@ -1676,7 +1676,7 @@
       "id": "9ee349bf-52a9-455e-a514-27e7f59dd6e4",
       "metadata": {
         "id": "9ee349bf-52a9-455e-a514-27e7f59dd6e4",
-        "outputId": "5290a1d8-5352-4dc3-c8b0-45a9bf17d696"
+        "outputId": "08c536ec-46e9-4a96-fe2d-f425a09f8a6a"
       },
       "outputs": [
         {
@@ -1712,17 +1712,17 @@
       "id": "502987db-ba58-4105-be2b-020b83fcf6e1",
       "metadata": {
         "id": "502987db-ba58-4105-be2b-020b83fcf6e1",
-        "outputId": "ce82b2ec-12c5-4a13-fa7b-2c80533ed4c4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "aa378e8c-296a-41f7-fa40-b5be150e4138"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting saludador.py\n"
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mFailed to start the Kernel. \n",
+            "Unhandled error. \n",
+            "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
           ]
         }
       ],
@@ -1739,78 +1739,8 @@
         "    click.echo(f'Tengo {edad} años')\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    me_llamo()"
+        "    me_llamo()\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python saludador.py --edad 32"
-      ],
-      "metadata": {
-        "id": "qCaRredjHirY"
-      },
-      "id": "qCaRredjHirY",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import click\n",
-        "\n",
-        "@click.command()\n",
-        "@click.option('--nombre', type=str, help='El nombre de la persona.')\n",
-        "@click.option('--edad', type=int, default=1, help='La edad de la persona.')\n",
-        "def me_llamo(nombre, edad):\n",
-        "    \"\"\"Programa que arma una frase con nombre y edad.\"\"\"\n",
-        "    click.echo(f\"Hola, mi nombre es {nombre}, un gusto :)\")\n",
-        "    click.echo(f'Tengo {edad} años')\n",
-        "\n",
-        "\n",
-        "me_llamo('felipe', 'aguirre')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7TlV_8r7G7sM",
-        "outputId": "1313905b-f69a-4c0d-8b3f-9e4689b16679"
-      },
-      "id": "7TlV_8r7G7sM",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hola, mi nombre es felipe, un gusto :)\n",
-            "Tengo aguirre años\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RWLPvVhnHQWn"
-      },
-      "id": "RWLPvVhnHQWn",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!aefgaegae"
-      ],
-      "metadata": {
-        "id": "P2ZysbwkHMZO"
-      },
-      "id": "P2ZysbwkHMZO",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1841,7 +1771,7 @@
       "id": "24d075e6-c2eb-4b56-bb38-947ae6d83cf3",
       "metadata": {
         "id": "24d075e6-c2eb-4b56-bb38-947ae6d83cf3",
-        "outputId": "1a4edfa8-5c6e-44b0-f247-68928313b594"
+        "outputId": "0491cfd4-0e85-42ce-e69a-401ed82a99d7"
       },
       "outputs": [
         {
@@ -1875,7 +1805,7 @@
       "id": "da862a8a-391f-4108-89a9-e677ad1aa20e",
       "metadata": {
         "id": "da862a8a-391f-4108-89a9-e677ad1aa20e",
-        "outputId": "93dd59d9-655c-4850-a205-2abb0043be4c"
+        "outputId": "baca1f9c-c62f-4507-e11c-54504b22eada"
       },
       "outputs": [
         {
@@ -1909,7 +1839,7 @@
       "id": "c3e49ff5-e8f6-4439-b4ef-1b06d692cbf7",
       "metadata": {
         "id": "c3e49ff5-e8f6-4439-b4ef-1b06d692cbf7",
-        "outputId": "8ac95f73-dc09-4c53-a22a-2265ef68726d"
+        "outputId": "79e205c3-fd39-493d-d0c5-8b5dbf750b72"
       },
       "outputs": [
         {
@@ -1953,7 +1883,7 @@
       "id": "f8130d35-64c6-4765-8003-ef516a069dfa",
       "metadata": {
         "id": "f8130d35-64c6-4765-8003-ef516a069dfa",
-        "outputId": "01582427-ddac-49f3-8e73-7d01a2fa1f64"
+        "outputId": "891997be-41ec-4470-ef40-48b2288261e2"
       },
       "outputs": [
         {
@@ -2072,7 +2002,7 @@
       "id": "6a78bc96-7ef3-4da5-8621-1f53ca6f627b",
       "metadata": {
         "id": "6a78bc96-7ef3-4da5-8621-1f53ca6f627b",
-        "outputId": "fd6b8269-1e2e-497f-d932-0387f49f5658"
+        "outputId": "cec7888e-9053-47ec-b752-0b3b08d02f2e"
       },
       "outputs": [
         {
@@ -2155,7 +2085,7 @@
       "id": "cf71ff33-3932-4156-8905-cbf9f4c2a4b6",
       "metadata": {
         "id": "cf71ff33-3932-4156-8905-cbf9f4c2a4b6",
-        "outputId": "568d3a6f-37d5-4f01-ae9a-ebdcb3727300"
+        "outputId": "1b8ade68-2791-472f-df8e-54803acea155"
       },
       "outputs": [
         {
@@ -2189,7 +2119,7 @@
       "id": "386994f2-3bae-48b8-901e-300d325b157a",
       "metadata": {
         "id": "386994f2-3bae-48b8-901e-300d325b157a",
-        "outputId": "7e70648e-0645-45a4-88d1-24f0a91e25f3"
+        "outputId": "5b90e969-f192-471b-a28b-c2c4c9631bb1"
       },
       "outputs": [
         {
@@ -2223,7 +2153,7 @@
       "id": "fabd0a68-851f-463d-96d7-e37eee8eda6a",
       "metadata": {
         "id": "fabd0a68-851f-463d-96d7-e37eee8eda6a",
-        "outputId": "d30514a5-72c6-4e2d-ba55-b1e8e48757ab"
+        "outputId": "c69ab755-de7f-4724-92a0-28c695899da0"
       },
       "outputs": [
         {
@@ -2257,7 +2187,7 @@
       "id": "96de5367-56b7-4374-8113-95bf30a0487f",
       "metadata": {
         "id": "96de5367-56b7-4374-8113-95bf30a0487f",
-        "outputId": "59ecc676-762c-434a-9db4-5a408b7e9efe"
+        "outputId": "0141897f-9b98-4e39-c7d0-f89aa4d1aea3"
       },
       "outputs": [
         {
@@ -2281,7 +2211,7 @@
       "id": "edc3d5c6-4e52-480d-9330-7bee9d73b011",
       "metadata": {
         "id": "edc3d5c6-4e52-480d-9330-7bee9d73b011",
-        "outputId": "bc59efde-c06a-4dfd-c0dc-a63f170add90"
+        "outputId": "69a4cae6-2f57-469f-e9fc-fc16167d09bd"
       },
       "outputs": [
         {
@@ -2361,7 +2291,7 @@
       "id": "7f6ab04b-d0e3-4351-a8ec-3cf581c2e54b",
       "metadata": {
         "id": "7f6ab04b-d0e3-4351-a8ec-3cf581c2e54b",
-        "outputId": "f8d5ea85-df0f-4d9c-bedc-5602b3fc27fb"
+        "outputId": "23ce6299-4cf7-48f9-b707-abd942f48a45"
       },
       "outputs": [
         {
@@ -2415,7 +2345,7 @@
       "id": "8621e5a3-1bcd-4d0a-97b4-49c3542909f0",
       "metadata": {
         "id": "8621e5a3-1bcd-4d0a-97b4-49c3542909f0",
-        "outputId": "eb52f67a-a117-4c5c-92a4-280312816a0d"
+        "outputId": "7c3c62af-4a05-4375-ea4f-486e6e5cd84d"
       },
       "outputs": [
         {
@@ -2575,8 +2505,7 @@
       }
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
