--- a/0 - Introduccion a Python/6 - POO/ejercicio.ipynb
+++ b/0 - Introduccion a Python/6 - POO/ejercicio.ipynb
@@ -45,37 +45,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "EMjTx_QmtOJF"
       },
       "outputs": [],
       "source": [
         "# Clase Item\n",
+        "class Item:\n",
+        "  def __init__(self, nombre, precio, imagen = None):\n",
+        "    self._nombre = nombre\n",
+        "    self._precio = precio\n",
+        "    if imagen == None:\n",
+        "      self._imagen = ''\n",
+        "    else:\n",
+        "      self._imagen = imagen\n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "tI5vk-tDtOJG"
       },
       "outputs": [],
       "source": [
         "# Crear los ítems banana de $49.5 y yoghurt de $32.5\n",
-        "\n"
+        "\n",
+        "banana = Item('Banana', 49.5, 'URLdeimagen.com')\n",
+        "yoghurt = Item('Yoghurt', 32.5, 'Urldeotraimagen.com')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "Yb0XaAAZtOJH"
       },
       "outputs": [],
       "source": [
         "# Crear la clase Carrito\n",
+        "\n",
+        "class Carrito:\n",
+        "  def __init__(self):\n",
+        "    self._lineas = []\n",
+        "\n",
+        "  def agregar_linea(self, item : Item, cantidad = 1):\n",
+        "    linea = {'item': item, 'cantidad': cantidad}\n",
+        "    self._lineas.append(linea)\n",
+        "\n",
+        "  def get_total(self):\n",
+        "    total = 0\n",
+        "    for linea in self._lineas:\n",
+        "      subtotalItem = linea['item']._precio * linea['cantidad']\n",
+        "      total += subtotalItem\n",
+        "    return total\n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
@@ -90,46 +119,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "gi0mO7QGtOJH"
       },
       "outputs": [],
       "source": [
-        "# Instancias el carrito\n"
+        "# Instancias el carrito\n",
+        "car1 = Carrito()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "CC2NjPO7tOJI"
       },
       "outputs": [],
       "source": [
-        "# Agregar bananas\n"
+        "# Agregar bananas y yogures\n",
+        "car1.agregar_linea(banana, 2)\n",
+        "car1.agregar_linea(yoghurt,3)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "AwzfwNvOtOJI"
+        "id": "XtrwBpTXtOJI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a8267fd0-71db-489a-9f6b-c2ff53353f8a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "196.5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agregar yoghures\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "XtrwBpTXtOJI"
-      },
-      "outputs": [],
-      "source": [
-        "# Obtener el total\n"
+        "# Obtener el total\n",
+        "print(car1.get_total())"
       ]
     },
     {
@@ -152,7 +186,9 @@
         "id": "AqsiSfYEtOJJ"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "\n"
+      ]
     }
   ],
   "metadata": {
